[package]
name = "polkit-waycrate"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
	"image",
	"canvas",
	"advanced",
	"smol",
] }
iced_runtime = { git = "https://github.com/iced-rs/iced" }
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", package = "iced_layershell" }
polkit-agent-rs = "0.3.0"
glib = "0.20.10"
futures = "0.3.31"

nix = { version = "0.30.0", features = ["process"] }
