[package]
name = "polkit-waycrate"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = [
	"image",
	"canvas",
	"advanced",
	"smol",
] }
iced_runtime = "0.14.0"
iced_layershell = "0.18.0"
polkit-agent-rs = "0.3.0"
glib = "0.20.10"
futures = "0.3.31"

nix = { version = "0.30.0", features = ["process"] }
